--- a/web/package.json
+++ b/web/package.json
@@ -5,5 +5,9 @@
 	"name": "web",
 	"version": "1.0.0",
 	"main": "index.js",
-	"license": "MIT"
+	"license": "MIT",
+	"scripts": {
+		"redis": "docker run -d -p 6379:6379 redis",
+		"serve": "php -S 0.0.0.0:80"
+	}
 }
